--- a/packages/ppbgdi/data_stream/apigateway_custom_logs/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/ppbgdi/data_stream/apigateway_custom_logs/elasticsearch/ingest_pipeline/default.yml
@@ -373,5 +373,8 @@ processors:
 
 on_failure:
 - set:
-    field: "error_information"
+    field: "error.message"
     value: "Processor {{ _ingest.on_failure_processor_type }} with tag {{ _ingest.on_failure_processor_tag }} in pipeline {{ _ingest.on_failure_pipeline }} failed with message {{ _ingest.on_failure_message }}"
+- set:
+    field: "event.kind"
+    value: "pipeline_error"
