--- a/packages/ppbgdi/data_stream/python_logs/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/ppbgdi/data_stream/python_logs/elasticsearch/ingest_pipeline/default.yml
@@ -96,19 +96,14 @@ processors:
       value: '{{ http.request.headers.x-forwarded-host }}'
       allow_duplicates: false
       if: 'ctx?.http?.request?.headers != null && ctx.http.request.headers.containsKey("x-forwarded-host")'
-#   - remove:
-#       field: temp
-#       ignore_missing: true
   - set:
       field: service.environment
       copy_from: kubernetes.namespace_labels.env # Elastic-Agent
       ignore_empty_value: true
-
   - set:
       field: service.environment
       copy_from: k8s.namespace.labels.env # Otel-Collector
       ignore_empty_value: true
-
   - script:
       lang: painless
       description: This script processor iterates over the whole document to remove fields with null or empty values.
@@ -155,4 +150,7 @@ on_failure:
       value: pipeline_error
   - append:
       field: error.message
-      value: '{{ _ingest.on_failure_message }}'
+      value: >-
+        Processor '{{{ _ingest.on_failure_processor_type }}}'
+        {{{#_ingest.on_failure_processor_tag}}}with tag '{{{ _ingest.on_failure_processor_tag }}}'
+        {{{/_ingest.on_failure_processor_tag}}}failed with message '{{{ _ingest.on_failure_message }}}'
