--- a/packages/ppbgdi/changelog.yml
+++ b/packages/ppbgdi/changelog.yml
@@ -1,4 +1,10 @@
 # newer versions go on top
+
+- version: "1.3.0"
+  changes:
+    - description: Enhance service-proxy parsing
+      type: enhancement
+      link: https://github.com/geoadmin/infra-elastic-integrations/pull/36
 - version: "1.2.0"
   changes:
     - description: Add api gateway custom logs parsing
