--- a/packages/ppbgdi/changelog.yml
+++ b/packages/ppbgdi/changelog.yml
@@ -1,5 +1,9 @@
 # newer versions go on top
-
+- version: "1.4.0"
+  changes:
+    - description: Added service-print3 raw logs parser
+      type: enhancement
+      link: https://github.com/geoadmin/infra-elastic-integrations/pull/38
 - version: "1.3.0"
   changes:
     - description: Enhance service-proxy parsing
