--- a/packages/ppbgdi/data_stream/service_print3_logs/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/ppbgdi/data_stream/service_print3_logs/elasticsearch/ingest_pipeline/default.yml
@@ -41,15 +41,12 @@ processors:
       description: JSON logs pipeline
       if: ctx.first_char == '{'
       name: '{{ IngestPipeline "common-json" }}'
-#   - pipeline:
-#       if: ctx.first_char != '{'
-#       name: '{{ IngestPipeline "common-raw" }}'
+  - pipeline:
+      if: ctx.first_char != '{'
+      name: '{{ IngestPipeline "common-raw" }}'
   - remove:
       field:
         - first_char
-#   - remove:
-#       field: temp
-#       ignore_missing: true
   - script:
       lang: painless
       description: This script processor iterates over the whole document to remove fields with null or empty values.
