--- a/packages/ppbgdi/changelog.yml
+++ b/packages/ppbgdi/changelog.yml
@@ -1,4 +1,9 @@
 # newer versions go on top
+- version: "1.5.0"
+  changes:
+    - description: Added apigateway custom logs kibana dashboard
+      type: enhancement
+      link: https://github.com/geoadmin/infra-elastic-integrations/pull/39
 - version: "1.4.0"
   changes:
     - description: Added service-print3 raw logs parser
