--- a/packages/ppbgdi/changelog.yml
+++ b/packages/ppbgdi/changelog.yml
@@ -1,4 +1,9 @@
 # newer versions go on top
+- version: "1.6.2"
+  changes:
+    - description: Fix lambda_logs data_stream pipeline and tests
+      type: enhancement
+      link: https://github.com/geoadmin/infra-elastic-integrations/pull/42
 - version: "1.6.1"
   changes:
     - description: Add failure handling on lambda_logs data_stream
