--- a/packages/ppbgdi/data_stream/python_logs/_dev/test/pipeline/test-service-atom-inspire-json.log-config.yml
+++ b/packages/ppbgdi/data_stream/python_logs/_dev/test/pipeline/test-service-atom-inspire-json.log-config.yml
@@ -9,6 +9,9 @@ fields:
       system: atom
       service: service-atom-inspire
       env: dev
+  service:
+    name: service-atom-inspire
+    environment: dev
 dynamic_fields:
   'event.ingested': "^.*$"
   'data_stream.dataset': "^.*$"
