--- a/packages/ppbgdi/data_stream/python_logs/_dev/test/pipeline/test-service-bod-nginx-raw.log-config.yml
+++ b/packages/ppbgdi/data_stream/python_logs/_dev/test/pipeline/test-service-bod-nginx-raw.log-config.yml
@@ -11,7 +11,9 @@ fields:
       env: dev
     container:
       name: auth-bod
-  service.name: service-bod
+  service:
+    name: service-bod
+    environment: dev
 dynamic_fields:
   'event.ingested': "^.*$"
   'data_stream.dataset': "^.*$"
