--- a/packages/ppbgdi/data_stream/python_logs/_dev/test/pipeline/test-service-control-json.log-config.yml
+++ b/packages/ppbgdi/data_stream/python_logs/_dev/test/pipeline/test-service-control-json.log-config.yml
@@ -9,6 +9,9 @@ fields:
       system: control
       service: service-control
       env: dev
+  service:
+    name: service-control
+    environment: dev
 dynamic_fields:
   'event.ingested': "^.*$"
   'data_stream.dataset': "^.*$"
