--- a/packages/ppbgdi/data_stream/python_logs/_dev/test/pipeline/test-service-search-json.log-config.yml
+++ b/packages/ppbgdi/data_stream/python_logs/_dev/test/pipeline/test-service-search-json.log-config.yml
@@ -9,6 +9,9 @@ fields:
       system: api3
       service: service-search
       env: dev
+  service:
+    name: service-search
+    environment: dev
 dynamic_fields:
   'event.ingested': "^.*$"
   'data_stream.dataset': "^.*$"
