--- a/packages/ppbgdi/data_stream/python_logs/_dev/test/pipeline/test-service-wmts-json.log-config.yml
+++ b/packages/ppbgdi/data_stream/python_logs/_dev/test/pipeline/test-service-wmts-json.log-config.yml
@@ -9,6 +9,9 @@ fields:
       system: wmts
       service: service-wmts
       env: dev
+  service:
+    name: service-wmts
+    environment: dev
 dynamic_fields:
   'event.ingested': "^.*$"
   'data_stream.dataset': "^.*$"
