--- a/packages/ppbgdi/data_stream/python_logs/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/ppbgdi/data_stream/python_logs/elasticsearch/ingest_pipeline/default.yml
@@ -96,14 +96,14 @@ processors:
       value: '{{ http.request.headers.x-forwarded-host }}'
       allow_duplicates: false
       if: 'ctx?.http?.request?.headers != null && ctx.http.request.headers.containsKey("x-forwarded-host")'
-  - set:
-      field: service.environment
-      copy_from: kubernetes.namespace_labels.env # Elastic-Agent
-      ignore_empty_value: true
-  - set:
-      field: service.environment
-      copy_from: k8s.namespace.labels.env # Otel-Collector
-      ignore_empty_value: true
+#   - set:
+#       field: service.environment
+#       copy_from: kubernetes.namespace_labels.env # Elastic-Agent
+#       ignore_empty_value: true
+#   - set:
+#       field: service.environment
+#       copy_from: k8s.namespace.labels.env # Otel-Collector
+#       ignore_empty_value: true
   - script:
       lang: painless
       description: This script processor iterates over the whole document to remove fields with null or empty values.
