PB-1714: Fixed service-proxy logs

--- a/packages/ppbgdi/data_stream/service_proxy_logs/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/ppbgdi/data_stream/service_proxy_logs/elasticsearch/ingest_pipeline/default.yml
@@ -5,6 +5,8 @@ processors:
       field: temp.ppbgdi.proxy
       target_field: ppbgdi.app.proxy
       description: Rename temp proxy field
+      ignore_missing: true
+
   - foreach:
       description: Lowercase all http request headers for easier handling
       field: ppbgdi.app.proxy.downstream.http.request.headers
