--- a/packages/ppbgdi/changelog.yml
+++ b/packages/ppbgdi/changelog.yml
@@ -1,4 +1,9 @@
 # newer versions go on top
+- version: "1.7.1"
+  changes:
+    - description: Fixed service-proxy logs
+      type: enhancement
+      link: https://github.com/geoadmin/infra-elastic-integrations/pull/45
 - version: "1.7.0"
   changes:
     - description: Added kubernetes otel overwiew dashboard
